--- a/02_linear_and_softmax_regression.ipynb
+++ b/02_linear_and_softmax_regression.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 51,
    "id": "f950c04a-2788-4f3c-b1db-20a3cf97dfce",
    "metadata": {},
    "outputs": [],
@@ -30,6 +30,7 @@
     "\n",
     "import numpy as np\n",
     "import sys\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "from d2l import tensorflow as d2l_tf\n",
     "from d2l import torch as d2l_torch"
@@ -119,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 53,
    "id": "1a48c5ea-1b01-46a5-804d-ebcb14cb19a3",
    "metadata": {},
    "outputs": [],
@@ -131,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 54,
    "id": "bad4cf31-233a-462e-b33f-9cb44f86e261",
    "metadata": {},
    "outputs": [
@@ -139,32 +140,42 @@
      "data": {
       "text/plain": [
        "(<tf.Tensor: shape=(8, 2), dtype=float32, numpy=\n",
-       " array([[ 0.25883058,  2.0530121 ],\n",
-       "        [ 0.39729354, -1.0603833 ],\n",
-       "        [ 0.05721881, -0.73641664],\n",
-       "        [ 0.31468382, -1.043708  ],\n",
-       "        [-1.0798566 , -0.550977  ],\n",
-       "        [-1.6296045 ,  2.189807  ],\n",
-       "        [ 0.3019283 , -0.8288437 ],\n",
-       "        [-0.3030514 ,  0.40066257]], dtype=float32)>,\n",
+       " array([[-1.0015383 ,  0.57782257],\n",
+       "        [ 2.1885874 , -1.0084082 ],\n",
+       "        [ 0.07912588,  0.9999752 ],\n",
+       "        [-2.1651304 , -0.6028279 ],\n",
+       "        [-0.43717226, -0.97477084],\n",
+       "        [ 0.23685592,  0.07229063],\n",
+       "        [ 1.1139474 ,  0.9129607 ],\n",
+       "        [-1.1068404 , -1.0044372 ]], dtype=float32)>,\n",
        " <tf.Tensor: shape=(8, 1), dtype=float32, numpy=\n",
-       " array([[-1.6477871],\n",
-       "        [ 7.9544015],\n",
-       "        [ 6.3242235],\n",
-       "        [ 7.7690415],\n",
-       "        [ 3.4966393],\n",
-       "        [-5.8354015],\n",
-       "        [ 7.093859 ],\n",
-       "        [ 2.1846747]], dtype=float32)>)"
+       " array([[ 0.25978887],\n",
+       "        [11.411657  ],\n",
+       "        [ 1.1937071 ],\n",
+       "        [ 1.4812502 ],\n",
+       "        [ 6.055501  ],\n",
+       "        [ 4.2518063 ],\n",
+       "        [ 3.4811833 ],\n",
+       "        [ 4.801027  ]], dtype=float32)>)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "features[:BATCH_SIZE], labels[:BATCH_SIZE]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fcc24707-171a-4b32-9df3-c17049e4ba43",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visualise"
    ]
   },
   {
@@ -242,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "id": "352e9ba6-e40d-4458-b235-476163311206",
    "metadata": {},
    "outputs": [],
@@ -254,32 +265,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "id": "7b663559-f0c6-4300-a829-ef0c9d1cb32b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor([[ 0.9355, -0.8222],\n",
-       "         [-0.5997,  1.0499],\n",
-       "         [-0.9472,  0.2633],\n",
-       "         [ 0.9309,  0.4007],\n",
-       "         [-1.2002,  0.6576],\n",
-       "         [-0.3912,  0.0140],\n",
-       "         [ 0.0821, -0.7032],\n",
-       "         [ 0.5781,  0.5491]]),\n",
-       " tensor([[ 8.3278],\n",
-       "         [-0.3404],\n",
-       "         [ 1.3197],\n",
-       "         [ 4.6700],\n",
-       "         [-0.3835],\n",
-       "         [ 3.1698],\n",
-       "         [ 6.2808],\n",
-       "         [ 3.5099]]))"
+       "(tensor([[ 0.7823,  1.8154],\n",
+       "         [ 0.0109, -0.6892],\n",
+       "         [ 0.3098,  0.2561],\n",
+       "         [ 1.4715,  1.3581],\n",
+       "         [-0.0089,  0.6947],\n",
+       "         [ 1.3829,  0.3825],\n",
+       "         [-1.3502, -1.4832],\n",
+       "         [ 1.5449, -1.4367]]),\n",
+       " tensor([[ 0.1304],\n",
+       "         [ 6.0774],\n",
+       "         [ 3.8491],\n",
+       "         [ 2.8802],\n",
+       "         [ 1.8959],\n",
+       "         [ 5.6290],\n",
+       "         [ 5.7484],\n",
+       "         [11.3960]]))"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 39,
    "id": "6904357f-9d6a-46fa-b7ad-1556e03dbfb9",
    "metadata": {},
    "outputs": [],
@@ -303,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 40,
    "id": "c755857d-fd2c-4c0c-846c-6c1cc34b3f01",
    "metadata": {},
    "outputs": [],
@@ -313,32 +324,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 41,
    "id": "06094160-160e-4ecf-a4e4-f4782ee44d87",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[tensor([[ 2.0036,  0.4265],\n",
-       "         [-0.2566, -0.3797],\n",
-       "         [-0.3721, -0.6596],\n",
-       "         [ 0.6673,  0.2818],\n",
-       "         [-0.5474,  0.9549],\n",
-       "         [-0.1003, -0.0773],\n",
-       "         [ 0.5441,  0.1022],\n",
-       "         [ 1.7986, -0.4563]]),\n",
-       " tensor([[6.7299],\n",
-       "         [4.6268],\n",
-       "         [5.2592],\n",
-       "         [4.4811],\n",
-       "         [0.0342],\n",
-       "         [4.0300],\n",
-       "         [4.7813],\n",
-       "         [8.9633]])]"
+       "[tensor([[-0.0752, -0.4736],\n",
+       "         [-1.6714,  0.1465],\n",
+       "         [-0.6860,  0.0310],\n",
+       "         [-0.8266,  0.3065],\n",
+       "         [-1.9363, -1.4242],\n",
+       "         [-0.6949, -0.8411],\n",
+       "         [-1.4741,  0.7326],\n",
+       "         [-0.3065, -1.1797]]),\n",
+       " tensor([[ 5.2659],\n",
+       "         [ 0.2198],\n",
+       "         [ 2.5432],\n",
+       "         [ 1.4277],\n",
+       "         [ 4.4214],\n",
+       "         [ 5.1134],\n",
+       "         [-1.1603],\n",
+       "         [ 6.9161]])]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -790,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 42,
    "id": "f5a62b69-b154-4ada-916e-918ee25cba45",
    "metadata": {},
    "outputs": [],
@@ -800,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 43,
    "id": "9d123100-ecc8-4c1d-9b4a-2bd0858f02aa",
    "metadata": {},
    "outputs": [],
@@ -816,12 +827,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 46,
    "id": "e7c8e241-3896-4f9c-a87b-1ff975112394",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train(model, train_iter, loss, num_epochs, optimizer:\n",
+    "def train(model, train_iter, loss, num_epochs, optimizer):\n",
     "    for epoch in range(num_epochs):\n",
     "        for X, y in train_iter:\n",
     "            l = loss(model(X) ,y)\n",
@@ -834,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 47,
    "id": "33fa60eb-3aaa-4d0b-9cee-ac897390f4f9",
    "metadata": {},
    "outputs": [
@@ -842,11 +853,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch 1, loss 0.000114\n",
-      "epoch 2, loss 0.000104\n",
-      "epoch 3, loss 0.000104\n",
-      "epoch 4, loss 0.000104\n",
-      "epoch 5, loss 0.000104\n"
+      "epoch 1, loss 0.000112\n",
+      "epoch 2, loss 0.000100\n",
+      "epoch 3, loss 0.000099\n",
+      "epoch 4, loss 0.000099\n",
+      "epoch 5, loss 0.000099\n"
      ]
     }
    ],
@@ -856,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 48,
    "id": "5fdb552e-2a72-4807-ae25-cee9557c9508",
    "metadata": {},
    "outputs": [
@@ -864,8 +875,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "error in estimating w: tensor([0.0002, 0.0007])\n",
-      "error in estimating b: tensor([0.0005])\n"
+      "error in estimating w: tensor([-0.0006, -0.0005])\n",
+      "error in estimating b: tensor([-0.0002])\n"
      ]
     }
    ],
@@ -878,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 49,
    "id": "258509ac-d82c-4a02-b1c2-79e2fcc1b0bc",
    "metadata": {},
    "outputs": [
@@ -886,8 +897,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[ 1.9998, -3.0007]])\n",
-      "tensor([3.9995])\n"
+      "tensor([[ 2.0006, -2.9995]])\n",
+      "tensor([4.0002])\n"
      ]
     }
    ],
