--- a/01_basics_pytorch_tensorflow.ipynb
+++ b/01_basics_pytorch_tensorflow.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 42,
    "id": "a5aa6976-65fa-40c0-84e6-5dc87157a114",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 18,
    "id": "ba53107e-135d-436e-b16b-d0d684ede722",
    "metadata": {},
    "outputs": [
@@ -50,7 +50,7 @@
        " <tf.Tensor: shape=(), dtype=float32, numpy=8.999998>)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 19,
    "id": "abb25bd0-eb47-4120-9e3d-b3675879bbbe",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,7 @@
        "(tensor(5.), tensor(6.), tensor(1.5000), tensor(9.))"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 20,
    "id": "5d7c83e4-3634-4eea-b30e-bec4e65fc5de",
    "metadata": {},
    "outputs": [
@@ -114,7 +114,7 @@
        "<tf.Tensor: shape=(4,), dtype=int32, numpy=array([0, 1, 2, 3], dtype=int32)>"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 21,
    "id": "748bae4f-719a-457a-958f-1a9b94937ac7",
    "metadata": {},
    "outputs": [
@@ -136,7 +136,7 @@
        "<tf.Tensor: shape=(), dtype=int32, numpy=3>"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 22,
    "id": "02244997-26e4-4e3d-96ef-6ac83fae620e",
    "metadata": {},
    "outputs": [
@@ -157,7 +157,7 @@
        "4"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 23,
    "id": "0cc7eaa1-7758-497b-b0b4-f1cb89eea18b",
    "metadata": {},
    "outputs": [
@@ -178,7 +178,7 @@
        "TensorShape([4])"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "id": "ab0a7ea0-2273-43cb-aaf9-7b7af45e3953",
    "metadata": {},
    "outputs": [
@@ -207,7 +207,7 @@
        "tensor([0, 1, 2, 3])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "id": "5e6d1e81-d8d1-44fa-ab41-26e330de820d",
    "metadata": {},
    "outputs": [
@@ -229,7 +229,7 @@
        "tensor(3)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "id": "f2f5e6f9-95ae-45bd-b2db-5766f3880528",
    "metadata": {},
    "outputs": [
@@ -250,7 +250,7 @@
        "4"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "id": "df0d38b8-5e4e-49b8-9b8f-cd2f0cb29e7a",
    "metadata": {},
    "outputs": [
@@ -271,7 +271,7 @@
        "torch.Size([4])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 28,
    "id": "0cd9c944-61b9-4e23-8082-81a1535a1eaf",
    "metadata": {},
    "outputs": [
@@ -305,7 +305,7 @@
        "       [16, 17, 18, 19]], dtype=int32)>"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 29,
    "id": "0aafef1e-0bb1-44c9-b39e-3d0d65cfa35e",
    "metadata": {},
    "outputs": [
@@ -331,7 +331,7 @@
        "       [ 3,  7, 11, 15, 19]], dtype=int32)>"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 30,
    "id": "9d31aa52-b841-47f6-8e00-e9e7848b5f7b",
    "metadata": {},
    "outputs": [
@@ -355,7 +355,7 @@
        "       [3, 4, 5]], dtype=int32)>"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 31,
    "id": "0e4d997a-8c1e-42e2-9a58-a1c22d394ba8",
    "metadata": {},
    "outputs": [
@@ -380,7 +380,7 @@
        "       [ True,  True,  True]])>"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 32,
    "id": "4224dcf6-01e8-48f0-8765-b4b88ddc85e0",
    "metadata": {},
    "outputs": [
@@ -413,7 +413,7 @@
        "        [16, 17, 18, 19]])"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 33,
    "id": "ecd18116-2f37-4d5e-b0f0-ccb3ce97645c",
    "metadata": {},
    "outputs": [
@@ -438,7 +438,7 @@
        "        [ 3,  7, 11, 15, 19]])"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 34,
    "id": "ea2a3a98-0968-40fb-8cb6-7d3685ef4dfa",
    "metadata": {},
    "outputs": [
@@ -461,7 +461,7 @@
        "        [3, 4, 5]])"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 35,
    "id": "f2c91716-2892-4553-b809-383d23ea5304",
    "metadata": {},
    "outputs": [
@@ -485,7 +485,7 @@
        "        [True, True, True]])"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,25 +504,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "id": "65fb2ee1-557b-4a7e-9626-2ec6f224153b",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Metal device set to: Apple M1 Pro\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-04-19 16:02:24.235668: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:305] Could not identify NUMA node of platform GPU ID 0, defaulting to 0. Your kernel may not have been built with NUMA support.\n",
-      "2022-04-19 16:02:24.236025: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:271] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 0 MB memory) -> physical PluggableDevice (device: 0, name: METAL, pci bus id: <undefined>)\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -536,7 +521,7 @@
        "        [20, 21, 22, 23]]], dtype=int32)>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "id": "ac1460c3-eba8-47e4-a4ab-5c03940713f8",
    "metadata": {},
    "outputs": [
@@ -569,7 +554,7 @@
        "        [32., 34., 36., 38.]], dtype=float32)>)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 41,
    "id": "fc02fee1-fd40-452d-b5fd-df1d1ecfc3f6",
    "metadata": {},
    "outputs": [
@@ -626,7 +611,7 @@
        " TensorShape([2, 3, 4]))"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -880,7 +865,7 @@
    "metadata": {},
    "source": [
     "* Tensorflow tend to follow functional notation where functions are wrapped around one another\n",
-    "* Pytorch tend to follow an object-oriented (syntactically dot) notaion where methods are called sequentially"
+    "* Pytorch tend to follow an object-oriented (syntactically dot) notaion where methods and attributes are called sequentially"
    ]
   },
   {
